--- a/The witcher promo landing/css/style.css
+++ b/The witcher promo landing/css/style.css
@@ -66,12 +66,14 @@ body {
 	line-height: 16px;
 	margin-bottom: 16px;
 	display: block;  
+	animation-delay: 0.1s
 }
 
 .rating {
 	display: flex;
 	align-items: center;
 	margin-bottom: 10px;
+	animation-delay: 0.3s
 }
 
 .rating-number {
@@ -85,6 +87,7 @@ body {
 	font-size: 76px;
 	line-height: 89px;
 	margin-bottom: 10px;
+	animation-delay: 0.5s
 }
 
 .main-description {
@@ -92,14 +95,22 @@ body {
 	font-size: 14px;
 	line-height: 150%;
 	margin-bottom: 40px;
+	animation-delay: 0.7s
 }
 
 .button {
+	display: inline-block;
 	background: #9D2929;
 	border-radius: 8px;
 	color: #fff;
 	border: none;
-	padding: 22px 72px
+	padding: 22px 72px;
+	text-decoration: none;
+	animation-delay: 1s
+}
+
+.button-active {
+	color: #fff;
 }
 
 .play-img {
@@ -114,6 +125,9 @@ body {
 }
 
 .play {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	background: #9D2929;
 	width: 100px;
 	height: 100px;
@@ -132,6 +146,7 @@ body {
 	border-radius: 50%;
 	left: -16px;
 	top: -16px;
+	animation: pulse 0.5s ease-in-out 0.5s infinite;
 }
 
 /* slider */
